force-app/main/default/objects/SAP_Interfaced_Data_Item__c/SAP_Interfaced_Data_Item__c.object-meta.xml
<CustomObject>
    <label>SAP Interfaced Data Item</label>
    <nameField>
        <displayFormat>SAPDI-{0}</displayFormat>
        <label>SAP Interfaced Data Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SAP Interfaced Data Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>