force-app/main/default/objects/SAP_Interfaced_Data_Item__c/fields/Line_Item_Total__c.field-meta.xml
<CustomField>
    <fullName>Line_Item_Total__c</fullName>
    <formula>Quantity__c * Product__r.Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Line Item Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>