force-app/main/default/objects/SAP_Interfaced_Data_Item__c/fields/Pack_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Pack_Quantity__c</fullName>
    <formula>Product__r.Pack_Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pack Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>