force-app/main/default/objects/SAP_Interfaced_Data_Item__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product__c</referenceTo>
    <relationshipLabel>SAP Interfaced Data Items</relationshipLabel>
    <relationshipName>SAP_Interfaced_Data_Items</relationshipName>
    <type>Lookup</type>
</CustomField>