force-app/main/default/objects/SAP_Interfaced_Data_Item__c/fields/SAP_Interfaced_Data__c.field-meta.xml
<CustomField>
    <fullName>SAP_Interfaced_Data__c</fullName>
    <label>SAP Interfaced Data</label>
    <referenceTo>SAP_Interfaced_Data__c</referenceTo>
    <relationshipLabel>SAP Interfaced Data Items</relationshipLabel>
    <relationshipName>SAP_Interfaced_Data_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>