force-app/main/default/objects/SAP_Interfaced_Data_Item__c/fields/Unit_of_Measure__c.field-meta.xml
<CustomField>
    <fullName>Unit_of_Measure__c</fullName>
    <formula>IF(OR( SAP_Interfaced_Data__r.Market__r.Capture_Volume_in_Bottles__c , TEXT( SAP_Interfaced_Data__r.Classification__c ) = &apos;AU6-Ecomm Sample Orders&apos;), &apos;BO&apos;, &apos;CS&apos;)</formula>
    <label>Unit of Measure</label>
    <type>Text</type>
</CustomField>