force-app/main/default/objects/SAP_Interfaced_Data_Item__c/recordTypes/Sample_Order_JAP_Storeroom_Request.recordType-meta.xml
<RecordType>
    <fullName>Sample_Order_JAP_Storeroom_Request</fullName>
    <active>true</active>
    <label>Sample Order - JAP - Storeroom Request</label>
</RecordType>